[gd_scene load_steps=5 format=3 uid="uid://c2u6imr0r7bkp"]

[ext_resource type="Script" uid="uid://cvyfx5u2r62io" path="res://scripts/Juego.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cdjbn5uykido4" path="res://escenas/Trash.tscn" id="2_t4q8c"]
[ext_resource type="PackedScene" uid="uid://bk3dvlb54sgcn" path="res://escenas/Player.tscn" id="2_v0a8y"]
[ext_resource type="PackedScene" uid="uid://d8k73mdktgu5" path="res://ui/HUD.tscn" id="4_qnwci"]

[node name="Juego" type="Node2D" groups=["juego"]]
script = ExtResource("1")
escena_basura = ExtResource("2_t4q8c")

[node name="TrashContainer" type="Node2D" parent="."]

[node name="Fondo" type="MeshInstance2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Player" parent="." instance=ExtResource("2_v0a8y")]
position = Vector2(727, 347)

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="HUD" parent="." instance=ExtResource("4_qnwci")]
